--- a/.travis.yml
+++ b/.travis.yml
@@ -5,17 +5,7 @@ env:
   - LC_CTYPE=en_US.UTF-8
   - LANG=en_US.UTF-8
   matrix:
-    - DESTINATION="OS=8.1,name=iPhone 4S"          SCHEME="AlamofireImage iOS"     SDK=iphonesimulator9.0  RUN_TESTS="YES"  BUILD_EXAMPLE="YES"  POD_LINT="YES"
-    - DESTINATION="OS=8.2,name=iPhone 5"           SCHEME="AlamofireImage iOS"     SDK=iphonesimulator9.0  RUN_TESTS="YES"  BUILD_EXAMPLE="YES"  POD_LINT="NO"
-    - DESTINATION="OS=8.3,name=iPhone 5S"          SCHEME="AlamofireImage iOS"     SDK=iphonesimulator9.0  RUN_TESTS="YES"  BUILD_EXAMPLE="YES"  POD_LINT="NO"
-    - DESTINATION="OS=8.4,name=iPhone 6"           SCHEME="AlamofireImage iOS"     SDK=iphonesimulator9.0  RUN_TESTS="YES"  BUILD_EXAMPLE="YES"  POD_LINT="NO"
-    - DESTINATION="OS=9.0,name=iPhone 6 Plus"      SCHEME="AlamofireImage iOS"     SDK=iphonesimulator9.0  RUN_TESTS="YES"  BUILD_EXAMPLE="YES"  POD_LINT="NO"
-    - DESTINATION="OS=8.1,name=iPad 2"             SCHEME="AlamofireImage iOS"     SDK=iphonesimulator9.0  RUN_TESTS="YES"  BUILD_EXAMPLE="YES"  POD_LINT="NO"
-    - DESTINATION="OS=8.2,name=iPad Retina"        SCHEME="AlamofireImage iOS"     SDK=iphonesimulator9.0  RUN_TESTS="YES"  BUILD_EXAMPLE="YES"  POD_LINT="NO"
-    - DESTINATION="OS=8.4,name=iPad Air"           SCHEME="AlamofireImage iOS"     SDK=iphonesimulator9.0  RUN_TESTS="YES"  BUILD_EXAMPLE="YES"  POD_LINT="NO"
-    - DESTINATION="OS=9.0,name=iPad Air 2"         SCHEME="AlamofireImage iOS"     SDK=iphonesimulator9.0  RUN_TESTS="YES"  BUILD_EXAMPLE="YES"  POD_LINT="NO"
-    - DESTINATION="OS=2.0,name=Apple Watch - 42mm" SCHEME="AlamofireImage watchOS" SDK=watchsimulator2.0   RUN_TESTS="NO"   BUILD_EXAMPLE="NO"   POD_LINT="NO"
-    - DESTINATION="arch=x86_64"                    SCHEME="AlamofireImage OSX"     SDK=macosx10.11         RUN_TESTS="YES"  BUILD_EXAMPLE="NO"   POD_LINT="NO"
+    - DESTINATION="OS=9.0,name=iPhone 6 Plus" SCHEME="AlamofireImage iOS" SDK=iphonesimulator9.0 RUN_TESTS="YES" BUILD_EXAMPLE="YES" POD_LINT="YES"
 before_install:
   - gem install cocoapods --no-rdoc --no-ri --no-document --quiet
   - gem install xcpretty --no-rdoc --no-ri --no-document --quiet
@@ -24,25 +14,37 @@ script:
   - git submodule update --init --recursive
   - xcodebuild -version
 
+  # Build and run tests in Debug and Release
   - if [ $RUN_TESTS == "YES" ]; then
     xcodebuild -workspace AlamofireImage.xcworkspace -scheme "$SCHEME" -sdk "$SDK" -destination "$DESTINATION"
       -configuration Debug ONLY_ACTIVE_ARCH=NO test | xcpretty -c;
-    xcodebuild -workspace AlamofireImage.xcworkspace -scheme "$SCHEME" -sdk "$SDK" -destination "$DESTINATION"
-      -configuration Release ONLY_ACTIVE_ARCH=NO test | xcpretty -c;
-    else
+    fi
+  - if [ $RUN_TESTS == "YES" ]; then
       xcodebuild -workspace AlamofireImage.xcworkspace -scheme "$SCHEME" -sdk "$SDK" -destination "$DESTINATION"
-        -configuration Debug ONLY_ACTIVE_ARCH=NO | xcpretty -c;
-      - xcodebuild -workspace AlamofireImage.xcworkspace -scheme "$SCHEME" -sdk "$SDK" -destination "$DESTINATION"
+        -configuration Release ONLY_ACTIVE_ARCH=NO test | xcpretty -c;
+    fi
+
+  # Only build in Debug and Release
+  - if [ $RUN_TESTS == "NO" ]; then
+    xcodebuild -workspace AlamofireImage.xcworkspace -scheme "$SCHEME" -sdk "$SDK" -destination "$DESTINATION"
+      -configuration Debug ONLY_ACTIVE_ARCH=NO | xcpretty -c;
+    fi
+  - if [ $RUN_TESTS == "NO" ]; then
+      xcodebuild -workspace AlamofireImage.xcworkspace -scheme "$SCHEME" -sdk "$SDK" -destination "$DESTINATION"
         -configuration Release ONLY_ACTIVE_ARCH=NO | xcpretty -c;
     fi
 
+  # Build example in Debug and Release
   - if [ $BUILD_EXAMPLE == "YES" ]; then 
       xcodebuild -workspace AlamofireImage.xcworkspace -scheme "iOS Example" -sdk "$SDK" -destination "$DESTINATION"
         -configuration Debug ONLY_ACTIVE_ARCH=NO build | xcpretty -c;
+    fi
+  - if [ $BUILD_EXAMPLE == "YES" ]; then 
       xcodebuild -workspace AlamofireImage.xcworkspace -scheme "iOS Example" -sdk "$SDK" -destination "$DESTINATION"
         -configuration Release ONLY_ACTIVE_ARCH=NO build | xcpretty -c;
     fi
 
+  # Run pod lib lint quick if specified
   - if [ $POD_LINT == "YES" ]; then
       pod lib lint --quick;
     fi
