--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ env:
   - LC_CTYPE=en_US.UTF-8
   - LANG=en_US.UTF-8
   matrix:
+    - DESTINATION="OS=9.0,name=iPad 2" SCHEME="AlamofireImage iOS" SDK=iphonesimulator9.0 RUN_TESTS="YES" BUILD_EXAMPLE="YES" POD_LINT="NO"
+    - DESTINATION="OS=9.0,name=iPhone 6" SCHEME="AlamofireImage iOS" SDK=iphonesimulator9.0 RUN_TESTS="YES" BUILD_EXAMPLE="YES" POD_LINT="NO"
     - DESTINATION="OS=9.0,name=iPhone 6 Plus" SCHEME="AlamofireImage iOS" SDK=iphonesimulator9.0 RUN_TESTS="YES" BUILD_EXAMPLE="YES" POD_LINT="YES"
 before_install:
   - gem install cocoapods --no-rdoc --no-ri --no-document --quiet
@@ -34,14 +36,10 @@ script:
         -configuration Release ONLY_ACTIVE_ARCH=NO | xcpretty -c;
     fi
 
-  # Build example in Debug and Release
+  # Build example in Debug (having issues in Release with Travis-CI)
   - if [ $BUILD_EXAMPLE == "YES" ]; then 
       xcodebuild -workspace AlamofireImage.xcworkspace -scheme "iOS Example" -sdk "$SDK" -destination "$DESTINATION"
         -configuration Debug ONLY_ACTIVE_ARCH=NO build | xcpretty -c;
-    fi
-  - if [ $BUILD_EXAMPLE == "YES" ]; then 
-      xcodebuild -workspace AlamofireImage.xcworkspace -scheme "iOS Example" -sdk "$SDK" -destination "$DESTINATION"
-        -configuration Release ONLY_ACTIVE_ARCH=NO build | xcpretty -c;
     fi
 
   # Run pod lib lint quick if specified
