--- a/iOS Example.xcodeproj/xcshareddata/xcschemes/iOS Example.xcscheme
+++ b/iOS Example.xcodeproj/xcshareddata/xcschemes/iOS Example.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "4CDA9E5B1AACEB740077861B"
-               BuildableName = "iOS Example.app"
+               BuildableName = "AFImage.app"
                BlueprintName = "iOS Example"
                ReferencedContainer = "container:iOS Example.xcodeproj">
             </BuildableReference>
@@ -33,7 +33,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "4CDA9E5B1AACEB740077861B"
-            BuildableName = "iOS Example.app"
+            BuildableName = "AFImage.app"
             BlueprintName = "iOS Example"
             ReferencedContainer = "container:iOS Example.xcodeproj">
          </BuildableReference>
@@ -56,7 +56,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "4CDA9E5B1AACEB740077861B"
-            BuildableName = "iOS Example.app"
+            BuildableName = "AFImage.app"
             BlueprintName = "iOS Example"
             ReferencedContainer = "container:iOS Example.xcodeproj">
          </BuildableReference>
@@ -75,7 +75,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "4CDA9E5B1AACEB740077861B"
-            BuildableName = "iOS Example.app"
+            BuildableName = "AFImage.app"
             BlueprintName = "iOS Example"
             ReferencedContainer = "container:iOS Example.xcodeproj">
          </BuildableReference>
