--- a/.travis.yml
+++ b/.travis.yml
@@ -27,11 +27,11 @@ script:
   # Build and run tests in Debug and Release
   - if [ $RUN_TESTS == "YES" ]; then
     xcodebuild -workspace AlamofireImage.xcworkspace -scheme "$SCHEME" -sdk "$SDK" -destination "$DESTINATION"
-      -configuration Debug ONLY_ACTIVE_ARCH=NO test | xcpretty -c;
+      -configuration Debug ONLY_ACTIVE_ARCH=NO test;
     fi
   - if [ $RUN_TESTS == "YES" ]; then
       xcodebuild -workspace AlamofireImage.xcworkspace -scheme "$SCHEME" -sdk "$SDK" -destination "$DESTINATION"
-        -configuration Release ONLY_ACTIVE_ARCH=NO test | xcpretty -c;
+        -configuration Release ONLY_ACTIVE_ARCH=NO test;
     fi
 
   # Only build in Debug and Release
