--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ env:
     - DESTINATION="OS=9.0,name=iPhone 6" SCHEME="AlamofireImage iOS" SDK=iphonesimulator9.0 RUN_TESTS="YES" BUILD_EXAMPLE="YES" POD_LINT="NO"
     - DESTINATION="OS=9.0,name=iPhone 6 Plus" SCHEME="AlamofireImage iOS" SDK=iphonesimulator9.0 RUN_TESTS="YES" BUILD_EXAMPLE="YES" POD_LINT="NO"
 
-    - DESTINATION="OS=8.1,name=iPad 2" SCHEME="AlamofireImage iOS" SDK=iphonesimulator9.0 RUN_TESTS="YES" BUILD_EXAMPLE="YES" POD_LINT="YES"
+    - DESTINATION="OS=8.1,name=iPad 2" SCHEME="AlamofireImage iOS" SDK=iphonesimulator9.0 RUN_TESTS="YES" BUILD_EXAMPLE="YES" POD_LINT="NO"
     - DESTINATION="OS=8.2,name=iPhone 4S" SCHEME="AlamofireImage iOS" SDK=iphonesimulator9.0 RUN_TESTS="YES" BUILD_EXAMPLE="YES" POD_LINT="NO"
     - DESTINATION="OS=8.3,name=iPhone 5" SCHEME="AlamofireImage iOS" SDK=iphonesimulator9.0 RUN_TESTS="YES" BUILD_EXAMPLE="YES" POD_LINT="NO"
     - DESTINATION="OS=8.4,name=iPhone 5S" SCHEME="AlamofireImage iOS" SDK=iphonesimulator9.0 RUN_TESTS="YES" BUILD_EXAMPLE="YES" POD_LINT="NO"
@@ -27,11 +27,11 @@ script:
   # Build and run tests in Debug and Release
   - if [ $RUN_TESTS == "YES" ]; then
     xcodebuild -workspace AlamofireImage.xcworkspace -scheme "$SCHEME" -sdk "$SDK" -destination "$DESTINATION"
-      -configuration Debug ONLY_ACTIVE_ARCH=NO test;
+      -configuration Debug ONLY_ACTIVE_ARCH=NO test | xcpretty -c;
     fi
   - if [ $RUN_TESTS == "YES" ]; then
       xcodebuild -workspace AlamofireImage.xcworkspace -scheme "$SCHEME" -sdk "$SDK" -destination "$DESTINATION"
-        -configuration Release ONLY_ACTIVE_ARCH=NO test;
+        -configuration Release ONLY_ACTIVE_ARCH=NO test | xcpretty -c;
     fi
 
   # Only build in Debug and Release
