Added --verbose flag to pod lib lint to attempt to debug lint issue.

--- a/.travis.yml
+++ b/.travis.yml
@@ -65,5 +65,5 @@ script:
 
   # Run `pod lib lint` if specified
   - if [ $POD_LINT == "YES" ]; then
-      pod lib lint;
+      pod lib lint --verbose;
     fi
