--- a/.travis.yml
+++ b/.travis.yml
@@ -65,5 +65,6 @@ script:
 
   # Run `pod lib lint` if specified
   - if [ $POD_LINT == "YES" ]; then
+      pod repo update master;
       pod lib lint --verbose;
     fi
