--- a/AlamofireImage.xcodeproj/xcshareddata/xcschemes/iOS Example.xcscheme
+++ b/AlamofireImage.xcodeproj/xcshareddata/xcschemes/iOS Example.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0930"
+   LastUpgradeVersion = "1000"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,10 +14,10 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "4CDA9E5B1AACEB740077861B"
-               BuildableName = "AFImage.app"
+               BlueprintIdentifier = "4C11830A2150517E007A8298"
+               BuildableName = "iOS Example.app"
                BlueprintName = "iOS Example"
-               ReferencedContainer = "container:iOS Example.xcodeproj">
+               ReferencedContainer = "container:AlamofireImage.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -32,10 +32,10 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "4CDA9E5B1AACEB740077861B"
-            BuildableName = "AFImage.app"
+            BlueprintIdentifier = "4C11830A2150517E007A8298"
+            BuildableName = "iOS Example.app"
             BlueprintName = "iOS Example"
-            ReferencedContainer = "container:iOS Example.xcodeproj">
+            ReferencedContainer = "container:AlamofireImage.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <AdditionalOptions>
@@ -55,19 +55,12 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "4CDA9E5B1AACEB740077861B"
-            BuildableName = "AFImage.app"
+            BlueprintIdentifier = "4C11830A2150517E007A8298"
+            BuildableName = "iOS Example.app"
             BlueprintName = "iOS Example"
-            ReferencedContainer = "container:iOS Example.xcodeproj">
+            ReferencedContainer = "container:AlamofireImage.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
-      <EnvironmentVariables>
-         <EnvironmentVariable
-            key = "OS_ACTIVITY_MODE"
-            value = "disable"
-            isEnabled = "YES">
-         </EnvironmentVariable>
-      </EnvironmentVariables>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
@@ -81,10 +74,10 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "4CDA9E5B1AACEB740077861B"
-            BuildableName = "AFImage.app"
+            BlueprintIdentifier = "4C11830A2150517E007A8298"
+            BuildableName = "iOS Example.app"
             BlueprintName = "iOS Example"
-            ReferencedContainer = "container:iOS Example.xcodeproj">
+            ReferencedContainer = "container:AlamofireImage.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
