--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -68,6 +68,8 @@ jobs:
     name: Test SPM Integration
     runs-on: macOS-latest    
     needs: [macOS]
+    env:
+      DEVELOPER_DIR: /Applications/Xcode_11.1.app/Contents/Developer
     steps:
       - uses: actions/checkout@v1
       - name: SPM Build
