--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
     name: Test macOS
     runs-on: macOS-latest
     env:
-      DEVELOPER_DIR: /Applications/Xcode_11.1.app/Contents/Developer
+      DEVELOPER_DIR: /Applications/Xcode_11.3.1.app/Contents/Developer
     steps:
       - uses: actions/checkout@v1
         with:
@@ -26,10 +26,10 @@ jobs:
     name: Test iOS 
     runs-on: macOS-latest
     env: 
-      DEVELOPER_DIR: /Applications/Xcode_11.1.app/Contents/Developer
+      DEVELOPER_DIR: /Applications/Xcode_11.3.1.app/Contents/Developer
     strategy:
       matrix:
-        destination: ["OS=13.1,name=iPhone 11 Pro"] #, "OS=12.4,name=iPhone XS", "OS=11.4,name=iPhone X", "OS=10.3.1,name=iPhone SE"]
+        destination: ["OS=13.3,name=iPhone 11 Pro"]
     steps:
       - uses: actions/checkout@v1
         with:
@@ -40,10 +40,10 @@ jobs:
     name: Test tvOS 
     runs-on: macOS-latest
     env: 
-      DEVELOPER_DIR: /Applications/Xcode_11.1.app/Contents/Developer
+      DEVELOPER_DIR: /Applications/Xcode_11.3.1.app/Contents/Developer
     strategy:
       matrix:
-        destination: ["OS=13.0,name=Apple TV 4K"] #, "OS=11.4,name=Apple TV 4K", "OS=10.2,name=Apple TV 1080p"]
+        destination: ["OS=13.3,name=Apple TV 4K"]
     steps:
       - uses: actions/checkout@v1
         with:
@@ -54,10 +54,10 @@ jobs:
     name: Build watchOS
     runs-on: macOS-latest
     env: 
-      DEVELOPER_DIR: /Applications/Xcode_11.1.app/Contents/Developer
+      DEVELOPER_DIR: /Applications/Xcode_11.3.1.app/Contents/Developer
     strategy:
       matrix:
-        destination: ["OS=6.0,name=Apple Watch Series 5 - 44mm"] #, "OS=4.2,name=Apple Watch Series 3 - 42mm", "OS=3.2,name=Apple Watch Series 2 - 42mm"]
+        destination: ["OS=6.1.1,name=Apple Watch Series 5 - 44mm"]
     steps:
       - uses: actions/checkout@v1
         with:
@@ -69,7 +69,7 @@ jobs:
     runs-on: macOS-latest    
     needs: [macOS]
     env:
-      DEVELOPER_DIR: /Applications/Xcode_11.1.app/Contents/Developer
+      DEVELOPER_DIR: /Applications/Xcode_11.3.1.app/Contents/Developer
     steps:
       - uses: actions/checkout@v1
       - name: SPM Build
