--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   macOS_5_1:
-    name: Test macOS (5.1)
+    name: Build macOS (5.1)
     runs-on: macOS-latest
     env:
       DEVELOPER_DIR: /Applications/Xcode_11.3.1.app/Contents/Developer
@@ -19,20 +19,32 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Dependencies
-        run: carthage bootstrap --no-use-binaries --platform macOS
-      - name: macOS
-        run: set -o pipefail && env NSUnbufferedIO=YES xcodebuild -workspace "AlamofireImage.xcworkspace" -scheme "AlamofireImage macOS" -destination "platform=macOS" clean test | xcpretty
+        run: ./carthage.sh bootstrap --no-use-binaries --platform macOS
+      - name: macOS (5.1)
+        run: set -o pipefail && env NSUnbufferedIO=YES xcodebuild -workspace "AlamofireImage.xcworkspace" -scheme "AlamofireImage macOS" -destination "platform=macOS" clean build | xcpretty
   macOS_5_2:
     name: Test macOS (5.2)
     runs-on: macOS-latest
     env:
-      DEVELOPER_DIR: /Applications/Xcode_11.6.app/Contents/Developer
+      DEVELOPER_DIR: /Applications/Xcode_11.7.app/Contents/Developer
     steps:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Dependencies
-        run: carthage bootstrap --no-use-binaries --platform macOS
-      - name: macOS
+        run: ./carthage.sh bootstrap --no-use-binaries --platform macOS
+      - name: macOS (5.2)
+        run: set -o pipefail && env NSUnbufferedIO=YES xcodebuild -workspace "AlamofireImage.xcworkspace" -scheme "AlamofireImage macOS" -destination "platform=macOS" clean test | xcpretty
+  macOS_5_3:
+    name: Test macOS (5.3)
+    runs-on: macOS-latest
+    env:
+      DEVELOPER_DIR: /Applications/Xcode_12.2.app/Contents/Developer
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Dependencies
+        run: ./carthage.sh bootstrap --no-use-binaries --platform macOS
+      - name: macOS (5.3)
         run: set -o pipefail && env NSUnbufferedIO=YES xcodebuild -workspace "AlamofireImage.xcworkspace" -scheme "AlamofireImage macOS" -destination "platform=macOS" clean test | xcpretty
   # Catalyst:
   #   name: Test Catalyst
@@ -49,52 +61,52 @@ jobs:
     name: Test iOS 
     runs-on: macOS-latest
     env: 
-      DEVELOPER_DIR: /Applications/Xcode_11.6.app/Contents/Developer
+      DEVELOPER_DIR: /Applications/Xcode_12.2.app/Contents/Developer
     strategy:
       matrix:
-        destination: ["OS=13.6,name=iPhone 11 Pro"]
+        destination: ["OS=14.2,name=iPhone 12 Pro"]
     steps:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Dependencies
-        run: carthage bootstrap --no-use-binaries --platform iOS  
+        run: ./carthage.sh bootstrap --no-use-binaries --platform iOS  
       - name: iOS - ${{ matrix.destination }}
         run: set -o pipefail && env NSUnbufferedIO=YES xcodebuild -workspace "AlamofireImage.xcworkspace" -scheme "AlamofireImage iOS" -destination "${{ matrix.destination }}" clean test | xcpretty
   tvOS:
     name: Test tvOS 
     runs-on: macOS-latest
     env: 
-      DEVELOPER_DIR: /Applications/Xcode_11.6.app/Contents/Developer
+      DEVELOPER_DIR: /Applications/Xcode_12.2.app/Contents/Developer
     strategy:
       matrix:
-        destination: ["OS=13.4,name=Apple TV 4K"]
+        destination: ["OS=14.2,name=Apple TV 4K"]
     steps:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Dependencies
-        run: carthage bootstrap --no-use-binaries --platform tvOS
+        run: ./carthage.sh bootstrap --no-use-binaries --platform tvOS
       - name: tvOS - ${{ matrix.destination }}
         run: set -o pipefail && env NSUnbufferedIO=YES xcodebuild -workspace "AlamofireImage.xcworkspace" -scheme "AlamofireImage tvOS" -destination "${{ matrix.destination }}" clean test | xcpretty
   watchOS:
     name: Build watchOS
     runs-on: macOS-latest
     env: 
-      DEVELOPER_DIR: /Applications/Xcode_11.6.app/Contents/Developer
+      DEVELOPER_DIR: /Applications/Xcode_12.2.app/Contents/Developer
     strategy:
       matrix:
-        destination: ["OS=6.2.1,name=Apple Watch Series 5 - 44mm"]
+        destination: ["OS=7.1,name=Apple Watch Series 6 - 44mm"]
     steps:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Dependencies
-        run: carthage bootstrap --no-use-binaries --platform watchOS
+        run: ./carthage.sh bootstrap --no-use-binaries --platform watchOS
       - name: watchOS - ${{ matrix.destination }}
         run: set -o pipefail && env NSUnbufferedIO=YES xcodebuild -workspace "AlamofireImage.xcworkspace" -scheme "AlamofireImage watchOS" -destination "${{ matrix.destination }}" clean build | xcpretty
   spm:
     name: Build with SPM
     runs-on: macOS-latest    
     env:
-      DEVELOPER_DIR: /Applications/Xcode_11.6.app/Contents/Developer
+      DEVELOPER_DIR: /Applications/Xcode_12.2.app/Contents/Developer
     steps:
       - uses: actions/checkout@v2
       - name: SPM Build
