--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,7 +36,7 @@ jobs:
         run: set -o pipefail && env NSUnbufferedIO=YES xcodebuild -workspace "AlamofireImage.xcworkspace" -scheme "AlamofireImage macOS" -destination "platform=macOS" clean test | xcpretty
   macOS_5_3:
     name: Test macOS (5.3)
-    runs-on: macOS-latest
+    runs-on: macos-11.0
     env:
       DEVELOPER_DIR: /Applications/Xcode_12.2.app/Contents/Developer
     steps:
