--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,9 +36,9 @@ jobs:
         run: set -o pipefail && env NSUnbufferedIO=YES xcodebuild -workspace "AlamofireImage.xcworkspace" -scheme "AlamofireImage macOS" -destination "platform=macOS" clean test | xcpretty
   macOS_5_3:
     name: Test macOS (5.3)
-    runs-on: macos-11.0
+    runs-on: macOS-latest
     env:
-      DEVELOPER_DIR: /Applications/Xcode_12.2.app/Contents/Developer
+      DEVELOPER_DIR: /Applications/Xcode_12.4.app/Contents/Developer
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -61,10 +61,10 @@ jobs:
     name: Test iOS 
     runs-on: macOS-latest
     env: 
-      DEVELOPER_DIR: /Applications/Xcode_12.2.app/Contents/Developer
+      DEVELOPER_DIR: /Applications/Xcode_12.4.app/Contents/Developer
     strategy:
       matrix:
-        destination: ["OS=14.2,name=iPhone 12 Pro"]
+        destination: ["OS=14.4,name=iPhone 12 Pro"]
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -76,10 +76,10 @@ jobs:
     name: Test tvOS 
     runs-on: macOS-latest
     env: 
-      DEVELOPER_DIR: /Applications/Xcode_12.2.app/Contents/Developer
+      DEVELOPER_DIR: /Applications/Xcode_12.4.app/Contents/Developer
     strategy:
       matrix:
-        destination: ["OS=14.2,name=Apple TV 4K"]
+        destination: ["OS=14.4,name=Apple TV 4K"]
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -91,10 +91,10 @@ jobs:
     name: Build watchOS
     runs-on: macOS-latest
     env: 
-      DEVELOPER_DIR: /Applications/Xcode_12.2.app/Contents/Developer
+      DEVELOPER_DIR: /Applications/Xcode_12.4.app/Contents/Developer
     strategy:
       matrix:
-        destination: ["OS=7.1,name=Apple Watch Series 6 - 44mm"]
+        destination: ["OS=7.2,name=Apple Watch Series 6 - 44mm"]
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -106,7 +106,7 @@ jobs:
     name: Build with SPM
     runs-on: macOS-latest    
     env:
-      DEVELOPER_DIR: /Applications/Xcode_12.2.app/Contents/Developer
+      DEVELOPER_DIR: /Applications/Xcode_12.4.app/Contents/Developer
     steps:
       - uses: actions/checkout@v2
       - name: SPM Build
