Refactor Tests Using Firewalk (#440)
* Refactor tests with Endpoint.

* Increase stress tests.

* Update actions to use Firewalk.

* Test AFI on Catalyst.

* Fix flaky tests.

* Refactor test.

* Fix test reliability on tvOS.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Dependencies
-        run: ./carthage.sh bootstrap --no-use-binaries --platform macOS
+        run: carthage bootstrap --no-build
       - name: macOS (5.1)
         run: set -o pipefail && env NSUnbufferedIO=YES xcodebuild -workspace "AlamofireImage.xcworkspace" -scheme "AlamofireImage macOS" -destination "platform=macOS" clean build | xcpretty
   macOS_5_2:
@@ -30,8 +30,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+      - name: Install Firewalk
+        run: brew install alamofire/alamofire/firewalk && firewalk &
       - name: Dependencies
-        run: ./carthage.sh bootstrap --no-use-binaries --platform macOS
+        run: carthage bootstrap --no-build
       - name: macOS (5.2)
         run: set -o pipefail && env NSUnbufferedIO=YES xcodebuild -workspace "AlamofireImage.xcworkspace" -scheme "AlamofireImage macOS" -destination "platform=macOS" clean test | xcpretty
   macOS_5_3:
@@ -42,21 +44,26 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+      - name: Install Firewalk
+        run: brew install alamofire/alamofire/firewalk && firewalk &
       - name: Dependencies
-        run: ./carthage.sh bootstrap --no-use-binaries --platform macOS
+        run: carthage bootstrap --no-build
       - name: macOS (5.3)
         run: set -o pipefail && env NSUnbufferedIO=YES xcodebuild -workspace "AlamofireImage.xcworkspace" -scheme "AlamofireImage macOS" -destination "platform=macOS" clean test | xcpretty
-  # Catalyst:
-  #   name: Test Catalyst
-  #   runs-on: macOS-latest
-  #   env:
-  #     DEVELOPER_DIR: /Applications/Xcode_11.6.app/Contents/Developer
-  #   steps:
-  #     - uses: actions/checkout@v2
-  #     - name: Dependencies
-  #       run: carthage bootstrap --no-use-binaries --platform macCatalyst
-  #     - name: Catalyst
-  #       run: set -o pipefail && env NSUnbufferedIO=YES xcodebuild -workspace "AlamofireImage.xcworkspace" -scheme "Alamofire iOS" -destination "platform=macOS" clean test | xcpretty
+  Catalyst:
+    name: Test Catalyst
+    runs-on: macOS-latest
+    env:
+      DEVELOPER_DIR: /Applications/Xcode_12.4.app/Contents/Developer
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Install Firewalk
+        run: brew install alamofire/alamofire/firewalk && firewalk &
+      - name: Dependencies
+        run: carthage bootstrap --no-build
+      - name: Catalyst
+        run: set -o pipefail && env NSUnbufferedIO=YES xcodebuild -workspace "AlamofireImage.xcworkspace" -scheme "AlamofireImage iOS" -destination "platform=macOS" clean test | xcpretty
   iOS:
     name: Test iOS 
     runs-on: macOS-latest
@@ -68,8 +75,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+      - name: Install Firewalk
+        run: brew install alamofire/alamofire/firewalk && firewalk &
       - name: Dependencies
-        run: ./carthage.sh bootstrap --no-use-binaries --platform iOS  
+        run: carthage bootstrap --no-build
       - name: iOS - ${{ matrix.destination }}
         run: set -o pipefail && env NSUnbufferedIO=YES xcodebuild -workspace "AlamofireImage.xcworkspace" -scheme "AlamofireImage iOS" -destination "${{ matrix.destination }}" clean test | xcpretty
   tvOS:
@@ -83,8 +92,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+      - name: Install Firewalk
+        run: brew install alamofire/alamofire/firewalk && firewalk &
       - name: Dependencies
-        run: ./carthage.sh bootstrap --no-use-binaries --platform tvOS
+        run: carthage bootstrap --no-build
       - name: tvOS - ${{ matrix.destination }}
         run: set -o pipefail && env NSUnbufferedIO=YES xcodebuild -workspace "AlamofireImage.xcworkspace" -scheme "AlamofireImage tvOS" -destination "${{ matrix.destination }}" clean test | xcpretty
   watchOS:
@@ -99,7 +110,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Dependencies
-        run: ./carthage.sh bootstrap --no-use-binaries --platform watchOS
+        run: carthage bootstrap --no-build
       - name: watchOS - ${{ matrix.destination }}
         run: set -o pipefail && env NSUnbufferedIO=YES xcodebuild -workspace "AlamofireImage.xcworkspace" -scheme "AlamofireImage watchOS" -destination "${{ matrix.destination }}" clean build | xcpretty
   spm:
@@ -108,7 +119,8 @@ jobs:
     env:
       DEVELOPER_DIR: /Applications/Xcode_12.4.app/Contents/Developer
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@v2
       - name: SPM Build
         run: swift build -c debug
 
