--- a/AlamofireImage.xcodeproj/xcshareddata/xcschemes/AlamofireImage visionOS.xcscheme
+++ b/AlamofireImage.xcodeproj/xcshareddata/xcschemes/AlamofireImage visionOS.xcscheme
@@ -29,7 +29,7 @@
       shouldUseLaunchSchemeArgsEnv = "YES">
       <TestPlans>
          <TestPlanReference
-            reference = "container:Tests/Test Plans/AlamofireImage visionOS.xctestplan"
+            reference = "container:Tests/Test Plans/visionOS.xctestplan"
             default = "YES">
          </TestPlanReference>
       </TestPlans>
